...
    <string name="a_secure_memorable_password">A secure, memorable password</string>
    <string name="account_setup">Account setup</string>
    <string name="set_up_unlock">Set up unlock</string>
    <string name="set_up_later">Set up later</string>
    <string name="set_up_unlock_later">Set up unlock later?</string>
    <string name="you_can_return_to_complete_this_step_anytime_from_account_security_in_settings">You can return to complete this step anytime from Account Security in Settings.</string>
    <string name="confirm">Confirm</string>
    <string name="set_up_biometrics_or_choose_a_pin_code_to_quickly_access_your_vault_and_autofill_your_logins">Set up biometrics or choose a PIN code to quickly access your vault and Autofill your logins.</string>
    <string name="never_lose_access_to_your_vault">Never lose access to your vault</string>
    <string name="the_best_way_to_make_sure_you_can_always_access_your_vault">The best way to make sure you can always access your vault is to set up safeguards from the start.</string>
    <string name="one_of_the_best_ways_to_create_a_secure_and_memorable_password">One of the best ways to create a secure and memorable password is to use a passphrase. \nHere’s how:</string>
    <string name="create_a_hint">Create a hint</string>
    <string name="your_hint_will_be_send_to_you_via_email_when_you_request_it">Your hint will be sent to you via email when you request it.</string>
...
    <string name="export_confirmation_title">Confirm export</string>
    <string name="export_success">Data exported successfully</string>
    <string name="included_in_this_export">Included in this export</string>
    <string name="only_codes_stored_locally_on_this_device_will_be_exported">Only codes stored locally on this device will be exported. Synced codes aren’t included</string>
    <string name="security">Security</string>
    <string name="too_many_failed_biometric_attempts">Too many failed biometrics attempts.</string>
    <string name="version">Version</string>
    <string name="version_x" comment="%1$s is the version string (e.g. 2025.1.0 (1234)).">Version: %1$s</string>
    <string name="learn_more_about_how_to_use_bitwarden_authenticator_on_the_help_center">Learn more about how to use Bitwarden Authenticator on the Help Center.</string>
    <string name="key">Key</string>
    <string name="create_verification_code">Create Verification code</string>
    <string name="key_is_required">Key is required.</string>
    <string name="name_is_required">Name is required.</string>
...
    <string name="data_backup_message">Bitwarden Authenticator data is backed up and can be restored with your regularly scheduled device backups.</string>
    <string name="import_2fas_password_protected_not_supported">Importing from 2FAS password protected files is not supported. Try again with an exported file that is not password protected.</string>
    <string name="import_bitwarden_unsupported_format">Importing Bitwarden CSV files is not supported. Try again with an exported JSON file.</string>
    <string name="download_bitwarden_card_title">Download the Bitwarden app</string>
    <string name="download_bitwarden_card_message">Store all of your logins and sync verification codes directly with the Authenticator app.</string>
    <string name="download_now">Download now</string>
    <string name="sync_with_bitwarden_app">Sync with Bitwarden app</string>
    <string name="learn_more_link"><annotation link="learnMore">Learn more</annotation></string>
    <string name="shared_codes_error">Unable to sync codes from the Bitwarden app. Make sure both apps are up-to-date. You can still access your existing codes in the Bitwarden app.</string>
    <string name="sync_with_the_bitwarden_app">Sync with the Bitwarden app</string>
    <string name="sync_with_bitwarden_action_card_message">Allow Authenticator app syncing in settings to view all of your verification codes here.</string>
    <string name="take_me_to_app_settings">Take me to the app settings</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="please_try_again">Please try again</string>
    <string name="copy_to_bitwarden_vault">Copy to Bitwarden vault</string>
    <string name="default_save_option">Default save option</string>
    <string name="save_to_bitwarden">Save to Bitwarden</string>
    <string name="save_here">Save here</string>
    <string name="none">None</string>
    <string name="default_save_options_subtitle">Select where you would like to save new verification codes.</string>
    <string name="verification_code_created">Verification code created</string>
    <string name="choose_save_location_message">Save this authenticator key here, or add it to a login in your Bitwarden app.</string>
    <string name="save_option_as_default">Save option as default</string>
...
